2005-11-16  Dan Winship  <danw@novell.com>

	* libsoup/soup-xmlrpc-message.c
	(soup_xmlrpc_message_start_member): add the "name" element to the
	struct member. #321362, patch from Sebastian Bauer.

2005-11-01  Dan Winship  <danw@novell.com>

	* docs/reference/libsoup-docs.sgml: tell it to generate an index

	* docs/reference/tmpl/*.sgml: regen with newer gtk-doc

2005-11-01  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection.c (set_current_request,
	clear_current_request): Cast the argument to
	g_object_add/remove_weak_pointer to the wrong type, to make gcc
	4.1 happy, because C is stupid and "void **" means "a pointer to a
	void *", not "a pointer to any kind of pointer".

	* libsoup/soup-xmlrpc-response.c
	(soup_xmlrpc_value_dump_internal): fix gccism. #320349, from
	Roland Illig.

2005-10-27  Dan Winship  <danw@novell.com>

	* libsoup/soup-socket.c (soup_socket_client_new_async,
	soup_socket_client_new_sync): unref the SoupAddress passed to
	soup_socket_connect to avoid a leak. Based on a patch from Wang
	Xin.
	(socket_read_watch, read_from_network, socket_write_watch,
	soup_socket_write): request and handle G_IO_ERR and G_IO_HUP
	events when polling, since poll() will return them whether or not
	you asked for them, but glib will ignore them unless you did,
	which will result in CPU suckage if such an error occurs. #319305,
	patch from Jonathan Matthew.

2005-10-27  Dan Winship  <danw@novell.com>

	bgo #316313 / bnc #116762, and probably also bgo #318252

	* libsoup/soup-message-io.c (soup_message_io_stop): clear io->conn
	after releasing it, to make sure we can't accidentally release it
	twice.

	* libsoup/soup-connection.c (clear_current_request): Call
	soup_message_io_stop() on the cleared request.

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_post): do a
	little dance here to make sure the session can't queue another
	message on the connection while we're in the process of requeuing
	the original one.

2005-08-30  Tor Lillqvist  <tml@novell.com>